# contextpack

./: CHANGELOG.md  README.md  core.html  core.html.md  index.html  pyproject.toml  robots.txt  search.json  settings.ini  sitemap.xml
contextpack/: __init__.py  _modidx.py  core.py
nbs/: 00_core.ipynb  index.ipynb  nbdev.yml
