[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name="contextpack"
dynamic = ["version"]
description = "Collection of predefined contexts for helping your LLM"
readme = "README.md"
requires-python=">=3.7"
license = {text = "Apache-2.0"}
authors = [{name = "Alexis Gallagher", email = "alexis@alexisgallagher.com"}]
keywords = ['nbdev', 'jupyter', 'notebook', 'python']
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
]
dependencies = []

[project.urls]
Repository = "https://github.com/AnswerDotAI/contextpack"
Documentation = "https://AnswerDotAI.github.io/contextpack"

[project.entry-points.nbdev]
contextpack = "contextpack._modidx:d"

[tool.setuptools.dynamic]
version = {attr = "contextpack.__version__"}

[tool.setuptools.packages.find]
include = ["contextpack"]

[tool.nbdev]
custom_sidebar = false
